<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"

    tools:context=".MainActivity">

    <EditText
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="162dp"
        android:ems="10"
        android:hint="@string/docname" />

    <EditText
        android:id="@+id/textView4"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"

        android:layout_marginTop="225dp"
        android:ems="10"
        android:hint="@string/pill1name"
         />

    <EditText
        android:id="@+id/textView6"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"

        android:layout_marginTop="394dp"
        android:ems="10"
        android:hint="@string/pill2name"
         />

    <EditText
        android:id="@+id/textView5"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="225dp"
        android:ems="10"
        android:translationX="10dp"
        android:hint="@string/pilldosage"
         />

    <EditText
        android:id="@+id/textView7"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="394dp"
        android:layout_marginEnd="25dp"
        android:translationX="10dp"
        android:ems="10"
        android:hint="@string/pilldosage"
         />

    <TextView
        android:id="@+id/apptitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="26dp"
        android:text="@string/welcometext"
        android:textAlignment='center'
        android:textColor="#09CABA"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/mybutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="107dp"
        android:text="@string/senddatanextactivity" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="106dp"
        android:ems="10"
        android:hint="@string/entermane" />

    <Button
        android:id="@+id/button211"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:text="@string/sendalert"
         />

    <Button
        android:id="@+id/recyclerview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="63dp"
        android:text="@string/tips"
         />

    <TimePicker
        android:id="@+id/tp_timepicker"
        android:layout_width="320dp"
        android:layout_height="153dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="false"
        android:layout_centerVertical="true"
        android:layout_marginStart="-33dp"
        android:layout_marginLeft="-30dp"
        android:layout_marginRight="-30dp"
        android:layout_marginBottom="304dp"
        android:scaleX="0.7"
        android:scaleY="0.7"
        android:timePickerMode="spinner"
         />

    <TimePicker
        android:id="@+id/tp_timepicker2"
        android:layout_width="317dp"
        android:layout_height="136dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-26dp"
        android:layout_marginLeft="-30dp"
        android:layout_marginRight="-30dp"
        android:layout_marginBottom="144dp"
        android:scaleX="0.7"
        android:scaleY="0.7"
        android:timePickerMode="spinner" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="312dp"
        android:layout_marginEnd="30dp"
        android:text="@string/setbtn" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="490dp"
        android:layout_marginEnd="36dp"
        android:text="@string/setbtn" />

</RelativeLayout>